--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,10 @@
 body {
-    width: 1200px;
+    width: 100%;
     margin: 0 auto;
     background-image: url("https://media.istockphoto.com/vectors/abstract-geometric-medical-cross-shape-medicine-and-science-concept-vector-id911633218?k=20&m=911633218&s=612x612&w=0&h=B79KF2ZS-VbB_9valjf3xkrCrdKLCP0cyQa7G7YWWd8=");
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
 
 }
 
@@ -88,10 +89,11 @@ form {
     background-color: royalblue;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0px 0px 0px 20px;
     height: 550px;
-    font-size: 40px;
-    align-items: center;
+    /* align-items: center; */
     display: flex;
+    font-size: 20px;
     justify-content: center;
     align-content: space-around;
     flex-direction: column;
