--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,7 +126,32 @@ form {
     width: 100%;
     /* background-color: rgb(19, 77, 132); */
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+}
+.reminder {
+    display: flex;
+    padding: 0px 0px 0px 20px;
+    align-items: center;
+    /* justify-content: center; */
+    width: 100%;
+    height: 100px;
+    /* background-color: rgb(242, 243, 245); */
+    border-radius: 20px;
+    /* box-shadow: 2px 2px 2px 5px rgba(245, 241, 241, 0.5); */
+    /* background-color: red; */
+}
+.reminder-box{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 50px;
+    background-color: rgb(242, 243, 245);
+    border-radius: 20px;
+    box-shadow: 2px 2px 2px 5px rgba(245, 241, 241, 0.5);
+    background-color: red;
 }
 
 .header1 a {
