--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,22 +78,22 @@ a {
     width: 100%;
     /* background-color: blue; */
     justify-content: center;
-    height: 100%;
+    height: 80vh;
     align-items: center;
 }
 
 form {
     width: 546px;
-    margin-top: 60px;
+    margin-top: 10px;
     background-image: url("https://img.wallpapersafari.com/tablet/768/1024/66/0/UI9tRu.jpg");
     background-color: royalblue;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px 0px 0px 20px;
-    height: 550px;
+    height: auto;
     /* align-items: center; */
     display: flex;
-    font-size: 20px;
+    font-size: 15px;
     justify-content: center;
     align-content: space-around;
     flex-direction: column;
